# warroute

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  NOTICE  PLAN.md  README.md  pyproject.toml  upload_template.csv
infra/: Caddyfile  Caddyfile.cloudflare  Caddyfile.public  README.md  add-tester.sh  bootstrap.sh  remove-tester.sh
infra/systemd/: warroute-notify-due.service  warroute-notify-due.timer  warroute.service
migrations/: _v1.sql  _v2.sql  _v3.sql  _v4.sql  _v5.sql  _v6.sql  _v7.sql  _v8.sql
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/fixtures/: sample_wiglewifi.csv
tests/unit/: test_cells.py  test_census.py  test_coverage_report.py  test_coverage_sync.py  test_enrich.py  test_gpx.py  test_grid.py  test_ntfy_client.py  test_orchestrator.py  test_ors_client.py  test_parser.py  test_planner.py  test_precheck.py  test_scheduler.py  test_scorer.py  test_smoke.py  test_stateless_creds.py  test_sync.py  test_user_prefs.py  test_wdgowars_client.py  test_wdgowars_upload.py  test_web.py  test_wigle_client.py  test_wigle_upload.py
warroute/: __init__.py  cli.py  config.py  db.py  precheck.py  scheduler.py
warroute/clients/: __init__.py  census.py  ntfy.py  ors.py  wdgowars.py  wigle.py
warroute/coverage/: __init__.py  cells.py  grid.py  report.py  sync.py
warroute/router/: __init__.py  enrich.py  gpx.py  planner.py  scorer.py
warroute/uploader/: __init__.py  orchestrator.py  parser.py  watcher.py  wdgowars_upload.py  wigle_upload.py
warroute/web/: __init__.py  app.py  creds.py  routing_quota.py  templating.py  user_prefs.py
warroute/web/routes/: __init__.py  coverage.py  dashboard.py  plan.py  runs.py  settings.py  sync.py
warroute/web/static/: app.css  app.js
warroute/web/templates/: base.html  coverage.html  dashboard.html  dashboard_player.html  geocode_results.html  plan_form.html  plan_result.html  run.html  settings.html
