[project]
name = "warroute"
version = "0.0.1"
description = "Wardriving route planner and dual-uploader (WiGLE.net + WDGoWars)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Domenic Laurenzi" }]

dependencies = [
  # web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "python-multipart>=0.0.12",
  # config
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # http
  "httpx>=0.28",
  # data + filesystem
  "watchdog>=6.0",
  # cli
  "typer>=0.15",
  "rich>=13.9",
  # geo
  "shapely>=2.0",
  "openrouteservice>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-requests",
]

[project.scripts]
warroute = "warroute.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warroute"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "RUF",           # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true   # third-party geo libs lack stubs

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: hits real external APIs; gated by RUN_INTEGRATION=1",
]
